<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.YogaStudiosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/backgraound">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="26dp"
            android:layout_margin="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient1">

                <ImageView
                    android:id="@+id/iv_icon_yogaStudio1"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="104dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/start_guideline1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="157dp" />


                <TextView
                    android:id="@+id/tv_title_yogaStudio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/name_atma"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/start_guideline1"
                    app:layout_constraintTop_toTopOf="@+id/iv_icon_yogaStudio1" />

                <TextView
                    android:id="@+id/tv_description_yogaStudio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/description_atma"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/start_guideline1"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_yogaStudio1" />

                <RelativeLayout
                    android:id="@+id/expanded_view_yogaStudio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_icon_yogaStudio1">

                    <ImageView
                        android:id="@+id/location1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/location" />

                    <TextView
                        android:id="@+id/tv_address_yogaStudio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="121dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/location1"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/address_atma"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/iv_phone1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/location1"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/phone" />

                    <TextView
                        android:id="@+id/tv_phone_yogaStudio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_address_yogaStudio1"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/iv_phone1"
                        android:autoLink="phone"
                        android:linksClickable="true"
                        android:minHeight="48dp"
                        android:text="@string/phone_atma"
                        android:textSize="16sp" />

                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="26dp"
            android:layout_margin="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient1">

                <ImageView
                    android:id="@+id/iv_icon_yogaStudio2"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="104dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/start_guideline2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="159dp" />


                <TextView
                    android:id="@+id/tv_title_yogaStudio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/name_egahall"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/start_guideline2"
                    app:layout_constraintTop_toTopOf="@+id/iv_icon_yogaStudio2" />

                <TextView
                    android:id="@+id/tv_description_yogaStudio2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:scrollbars="vertical"
                    android:text="@string/description_egahall"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.044"
                    app:layout_constraintStart_toStartOf="@+id/start_guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_yogaStudio2" />

                <RelativeLayout
                    android:id="@+id/expanded_view_yogaStudio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_icon_yogaStudio2">

                    <ImageView
                        android:id="@+id/location2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/location" />

                    <TextView
                        android:id="@+id/tv_address_yogaStudio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/location2"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/address_egahall"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/iv_phone2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/location2"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/phone" />

                    <TextView
                        android:id="@+id/tv_phone_yogaStudio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_address_yogaStudio2"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/iv_phone2"
                        android:autoLink="phone"
                        android:linksClickable="true"
                        android:minHeight="48dp"
                        android:text="@string/phone_egahall"
                        android:textSize="16sp" />

                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="26dp"
            android:layout_margin="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient1">

                <ImageView
                    android:id="@+id/iv_icon_yogaStudio3"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="104dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/start_guideline3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="159dp" />


                <TextView
                    android:id="@+id/tv_title_yogaStudio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/name_sattva"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/start_guideline3"
                    app:layout_constraintTop_toTopOf="@+id/iv_icon_yogaStudio3" />

                <TextView
                    android:id="@+id/tv_description_yogaStudio3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:scrollbars="vertical"
                    android:text="@string/description_sattva"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.044"
                    app:layout_constraintStart_toStartOf="@+id/start_guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_yogaStudio3" />

                <RelativeLayout
                    android:id="@+id/expanded_view_yogaStudio3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_icon_yogaStudio3">

                    <ImageView
                        android:id="@+id/location3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/location" />

                    <TextView
                        android:id="@+id/tv_address_yogaStudio3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/location3"
                        android:clickable="true"
                        android:text="@string/address_sattva"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/iv_phone3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/location3"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/phone" />

                    <TextView
                        android:id="@+id/tv_phone_yogaStudio3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_address_yogaStudio3"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@id/iv_phone3"
                        android:autoLink="phone"
                        android:linksClickable="true"
                        android:focusable="true"
                        android:minHeight="48dp"
                        android:text="@string/phone_sattva"
                        android:textSize="16sp" />

                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>


